# cmake_tests_example

./: CMakeLists.txt  README.md  showcase.cpp
